# bench_httpx_pycurl

./: aiohttp_bench.py  bench_all.py  bench_all_subproc.py  bench_more.py  benchmark_leaderboards.py  benchmark_leaderboards_graphs.py  benchmark_leaderboards_graphs_with_ci.py  curl_bench.py  demo.py  hello.py  httpx_bench.py  pycurl_bench.py  pyproject.toml  requests_bench.py
client_reuse/: reuse.py
client_reuse_with_rs/: reuse.py
curio-demo/: pyproject.toml
curio-demo/src/: lib.rs
faster-rust-demo/: pyproject.toml
faster-rust-demo/src/: lib.rs
hyperfast/: Cargo.toml
hyperfast/src/: lib.rs
no_reuse/: no_reuse.py
no_reuse_with_ftr/: benchmark_httpx.py  no_reuse.py
no_reuse_with_rs/: no_reuse.py
no_reuse_with_rs_no_emit/: no_reuse.py
subpkgs/faster-rust-demo/: Cargo.toml  pyproject.toml
subpkgs/faster-rust-demo-no-emit/: Cargo.toml  pyproject.toml
subpkgs/faster-rust-demo-no-emit/src/: lib.rs
subpkgs/faster-rust-demo-parallel/: Cargo.toml  pyproject.toml
subpkgs/faster-rust-demo-parallel/src/: lib.rs
subpkgs/faster-rust-demo/src/: lib.rs
subpkgs/hyperfast_ext/: Cargo.toml  pyproject.toml
subpkgs/hyperfast_ext/src/: lib.rs
subpkgs/hyperfast_ext_no_emit/: Cargo.toml  pyproject.toml
subpkgs/hyperfast_ext_no_emit/src/: lib.rs
subpkgs/hyperfast_ext_parallel/: Cargo.toml  pyproject.toml
subpkgs/hyperfast_ext_parallel/src/: lib.rs
