[project]
name = "bench-httpx-pycurl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "matplotlib>=3.10.0",
    "polars>=1.21.0",
    "pycurl>=7.45.4",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
