[package]
name = "hyperfast5"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyperfast5"
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
pyo3 = { version = "0.18.0", features = ["extension-module"] }
once_cell = "1.20.3"
