[package]
name = "hyperfastparallel"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyperfastparallel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
once_cell = "1.17"
futures = "0.3"
